DP-13939: move close button to stop horizontal scroll

--- a/assets/scss/03-organisms/_utility-nav.scss
+++ b/assets/scss/03-organisms/_utility-nav.scss
@@ -325,7 +325,7 @@ $utility-nav-height: 43px;
     font-weight: 700;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 35px;;
 
     @media ($bp-header-toggle-max) {
       display: none;
